# beholder

./: .gitignore  Image_analysis_stack.py  README.md  TrackCellLineages.py  ada_runlist.json  calibration_runlist.json  cli.py  config.json  config.json.save  data.dvc  data_sync.sh  example_runlist.json  foundry_runlist.json  foundry_runlist.json.save  lauren_runlist.json  pyproject.toml  remote_run.py  segmentation.py  server.py  settings.yaml  test.tif
.dvc/: config
backend/ds/: FrameSeries.py  Pipeline.py
backend/signal_processing/: graphing.py  signal_transform.py  sigpro_utility.py  stats.py
backend/utils/: slack_messaging.py
beholder/: main.py
beholder/ds/: FrameSeries.py  ImageProcessing.py  Pipeline.py  Runlist.py  __init__.py
beholder/pipelines/: __init__.py  autofluoresence_conversion.py  frame_stabilization.py  generate_figures.py  gif_generator.py  long_analysis.py  longform_trend_analysis.py  nd2_conversion.py  nd2_to_gif.py  panel_detection.py  porcelain_check.py  rpu_conversion.py  segmentation.py  split_dataset.py  wide_analysis.py
beholder/signal_processing/: __init__.py  gif_resize.py  graphing.py  signal_transform.py  sigpro_utility.py  stats.py
beholder/utils/: __init__.py  config.py  gof.py  logging.py  slack_messaging.py
cell_tracking/: SegmentandTrack.py  TrackCellLineages.py
data/: README.md
file_utilities/: nd2_to_giff.py  nd2_to_giff_z.py  nd2_to_tiff.py
frontend/: package-lock.json  package.json
frontend/src/: App.vue
ml_models/: model.py
reference_notebooks/: filters.ipynb  lip_removal.ipynb  seg_vis.py  segmentation_vis.ipynb  segmentation_workflow.ipynb  thresholding.ipynb  tiff_splitter.py
research/file_utilities/: nd2_to_giff_z.py
research/napari_research/: test.py
research/reference_notebooks/: bioformats_test.py  blank_filter_fiji.ipynb  erosion.ipynb  event_extraction.ipynb  lip_removal.ipynb  paper_fig_generator.ipynb  pytorch.ipynb  seg_vis.py  tiff_splitter.py  ts_visualization_generator.ipynb  validation.ipynb
server/: server.py
server/ds/: FrameSeries.py
server/signal_processing/: graphing.py  sigpro_utility.py  stats.py
server/utils/: config_loader.py
signal_processing/: __init__.py  gif_resize.py  graphing.py  open_cv.py  pipeline.py  signal_transform.py  sigpro_utility.py  stats.py
(+4 files in other folders)
