[tool.poetry]
name = "Beholder"
version = "0.1.0"
description = ""
authors = ["W.R. Jackson"]

[tool.poetry.dependencies]
python = "^3.8"
tensorflow = "^2.3.1"
opencv-python = "^4.4.0"
click = "^7.1.2"
imageio = "^2.9.0"
tqdm = "^4.50.2"
pims = "^0.5"
nd2reader = "^3.2.3"
jupyterlab = "^2.2.9"
matplotlib = "^3.3.2"
scikit-image = "^0.17.2"
ipywidgets = "^7.5.1"
imutils = "^0.5.3"
watchdog = "^0.10.3"
pims-nd2 = "^1.1"
awscli = "^1.18.166"
pandas = "^1.1.3"
tiffile = "^2018.10.18"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
