[tool.poetry]
name = "Beholder"
version = "0.1.0"
description = ""
authors = ["W.R. Jackson"]

[tool.poetry.dependencies]
python = "3.8"
tensorflow = "^2.3.1"
click = "^7.1.2"
imageio = "^2.9.0"
tqdm = "^4.50.2"
pims = "^0.5"
nd2reader = "^3.2.3"
jupyterlab = "^2.2.9"
matplotlib = "^3.3.2"
scikit-image = "^0.17.2"
ipywidgets = "^7.5.1"
imutils = "^0.5.3"
watchdog = "^0.10.3"
pims-nd2 = "^1.1"
awscli = "^1.18.166"
pandas = "^1.1.3"
tiffile = "^2018.10.18"
pygifsicle = "^1.0.1"
dvc = {extras = ["s3"], version = "^1.9.1"}
websockets = "^8.1"
fastapi = "^0.61.2"
seaborn = "^0.11.0"
uvicorn = "^0.12.2"
imagecodecs = "^2020.5.30"
slack-sdk = "^3.1.0"
numba = "^0.52.0"
memory-profiler = "^0.58.0"
python-bioformats = "^4.0.0"
PyQt5 = "^5.15.2"
networkx = "^2.5"
napari = {extras = ["pyqt5"], version = "^0.4.2"}
opencv-python = "4.3.0.36"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
