[tool.poetry]
name = "Beholder"
version = "0.1.0"
description = ""
authors = ["W.R. Jackson"]

[tool.poetry.dependencies]
python = "3.8.5"
imageio = "^2.9.0"
tqdm = "^4.50.2"
pims = "^0.5"
nd2reader = "^3.2.3"
matplotlib = "^3.3.2"
scikit-image = "^0.17.2"
pandas = "^1.1.3"
tiffile = "^2018.10.18"
pygifsicle = "^1.0.1"
seaborn = "^0.11.0"
python-bioformats = "^4.0.0"
rich = "^10.1.0"
typer = "^0.3.2"
simple-term-menu = "^1.0.0"
xmltodict = "^0.12.0"
openpyxl = "^3.0.7"
opencv-python = "^4.5.2"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
